dnl Process this file with autoconf to produce a configure script.
AC_INIT(combineSig.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(TC,1.0)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

dnl Checks for libraries.
AC_CHECK_LIB(crypto, BN_add,[],[echo Can\'t find OpenSSL Library.. exiting; exit])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h openssl/bn.h openssl/evp.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile)
